Leooo618.leptos-csr-axum.40ae94bcacfb6eca02fca44f32f5269a67293b4d
Running as unit: run-p1236828-i13817134.scope; invocation ID: 2922f406060c4661bfe5391c79528bc1
   Compiling proc-macro2 v1.0.101
   Compiling unicode-ident v1.0.18
   Compiling libc v0.2.175
   Compiling serde v1.0.219
   Compiling version_check v0.9.5
   Compiling autocfg v1.5.0
    Checking pin-project-lite v0.2.16
    Checking futures-core v0.3.31
   Compiling thiserror v2.0.16
   Compiling log v0.4.27
    Checking memchr v2.7.5
   Compiling lock_api v0.4.13
    Checking once_cell v1.21.3
   Compiling semver v1.0.26
    Checking cfg-if v1.0.3
   Compiling parking_lot_core v0.9.11
   Compiling typenum v1.18.0
    Checking futures-sink v0.3.31
   Compiling smallvec v1.15.1
   Compiling rustversion v1.0.22
   Compiling quote v1.0.40
   Compiling rustc_version v0.4.1
    Checking futures-channel v0.3.31
   Compiling generic-array v0.14.7
   Compiling syn v2.0.106
   Compiling wasm-bindgen-shared v0.2.100
   Compiling icu_properties_data v2.0.1
   Compiling icu_normalizer_data v2.0.0
    Checking itoa v1.0.15
    Checking pin-utils v0.1.0
   Compiling bumpalo v3.19.0
    Checking stable_deref_trait v1.2.0
    Checking slab v0.4.11
    Checking bytes v1.10.1
    Checking futures-task v0.3.31
    Checking futures-io v0.3.31
   Compiling crossbeam-utils v0.8.21
   Compiling serde_json v1.0.143
   Compiling wasm-bindgen v0.2.100
    Checking scopeguard v1.2.0
    Checking num_cpus v1.17.0
    Checking litemap v0.8.0
    Checking writeable v0.6.1
    Checking concurrent-queue v2.5.0
   Compiling proc-macro-error-attr2 v2.0.0
    Checking ryu v1.0.20
    Checking fnv v1.0.7
    Checking parking v2.2.1
    Checking http v1.3.1
    Checking foldhash v0.1.5
    Checking percent-encoding v2.3.2
    Checking event-listener v5.4.1
    Checking equivalent v1.0.2
    Checking allocator-api2 v0.2.21
    Checking hashbrown v0.15.5
   Compiling parking_lot v0.12.4
    Checking form_urlencoded v1.2.2
   Compiling cpufeatures v0.2.17
   Compiling unicode-segmentation v1.12.0
    Checking indexmap v2.11.0
   Compiling block-buffer v0.10.4
   Compiling crypto-common v0.1.6
   Compiling digest v0.10.7
   Compiling num-traits v0.2.19
   Compiling convert_case v0.8.0
   Compiling sha2 v0.10.9
    Checking utf8_iter v1.0.4
   Compiling proc-macro2-diagnostics v0.10.1
   Compiling shlex v1.3.0
   Compiling unicode-xid v0.2.6
   Compiling cc v1.2.34
   Compiling const_format_proc_macros v0.2.34
   Compiling proc-macro-utils v0.10.0
    Checking socket2 v0.6.0
    Checking mio v1.0.4
   Compiling slotmap v1.0.7
    Checking throw_error v0.3.0
    Checking or_poisoned v0.1.0
    Checking base64 v0.22.1
   Compiling paste v1.0.15
   Compiling pkg-config v0.3.32
   Compiling vcpkg v0.2.15
    Checking event-listener-strategy v0.5.4
   Compiling reactive_graph v0.2.5
   Compiling server_fn_macro v0.8.6
    Checking send_wrapper v0.6.0
    Checking hashbrown v0.14.5
   Compiling camino v1.1.11
   Compiling libsqlite3-sys v0.30.1
   Compiling anyhow v1.0.99
    Checking dashmap v6.1.0
   Compiling synstructure v0.13.2
   Compiling wasm-bindgen-backend v0.2.100
   Compiling proc-macro-error2 v2.0.1
    Checking async-lock v3.4.1
   Compiling const_format v0.2.34
    Checking tracing-core v0.1.34
   Compiling wasm-bindgen-macro-support v0.2.100
   Compiling xxhash-rust v0.8.15
    Checking guardian v1.3.0
   Compiling serde_derive v1.0.219
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.0
   Compiling zerovec-derive v0.11.1
   Compiling displaydoc v0.2.5
   Compiling thiserror-impl v2.0.16
   Compiling futures-macro v0.3.31
   Compiling wasm-bindgen-macro v0.2.100
    Checking zerofrom v0.1.6
    Checking yoke v0.8.0
    Checking zerovec v0.11.4
    Checking futures-util v0.3.31
    Checking zerotrie v0.2.2
    Checking tinystr v0.8.1
    Checking icu_locale_core v2.0.0
    Checking potential_utf v0.1.2
    Checking icu_collections v2.0.0
    Checking js-sys v0.3.77
    Checking icu_provider v2.0.0
    Checking icu_properties v2.0.1
    Checking futures-executor v0.3.31
    Checking icu_normalizer v2.0.0
   Compiling tracing-attributes v0.1.30
    Checking idna_adapter v1.2.1
    Checking either v1.15.0
    Checking idna v1.1.0
    Checking wasm-bindgen-futures v0.4.50
    Checking futures v0.3.31
    Checking web-sys v0.3.77
    Checking url v2.5.7
   Compiling tokio-macros v2.5.0
   Compiling derive-where v1.6.0
    Checking any_spawner v0.3.0
    Checking hydration_context v0.3.0
    Checking tokio v1.47.1
   Compiling syn_derive v0.2.0
    Checking rustc-hash v2.1.1
   Compiling thiserror v1.0.69
    Checking tracing v0.1.41
error[E0282]: type annotations needed for `&_`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/reactive_graph-0.2.5/src/computed/async_derived/arc_async_derived.rs:672:14
    |
672 |             |v| v.deref(),
    |              ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type, where the placeholders `_` are specified
    |
672 |             |v: &_| v.deref(),
    |               ++++

error[E0282]: type annotations needed for `&mut _`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/reactive_graph-0.2.5/src/computed/async_derived/arc_async_derived.rs:673:14
    |
673 |             |v| v.deref_mut(),
    |              ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type, where the placeholders `_` are specified
    |
673 |             |v: &mut _| v.deref_mut(),
    |               ++++++++

error[E0282]: type annotations needed for `&_`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/reactive_graph-0.2.5/src/computed/async_derived/arc_async_derived.rs:690:14
    |
690 |             |v| v.deref(),
    |              ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type, where the placeholders `_` are specified
    |
690 |             |v: &_| v.deref(),
    |               ++++

error[E0282]: type annotations needed for `&mut _`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/reactive_graph-0.2.5/src/computed/async_derived/arc_async_derived.rs:691:14
    |
691 |             |v| v.deref_mut(),
    |              ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type, where the placeholders `_` are specified
    |
691 |             |v: &mut _| v.deref_mut(),
    |               ++++++++

error[E0282]: type annotations needed for `&_`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/reactive_graph-0.2.5/src/computed/async_derived/async_derived.rs:367:14
    |
367 |             |v| v.deref(),
    |              ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type, where the placeholders `_` are specified
    |
367 |             |v: &_| v.deref(),
    |               ++++

error[E0282]: type annotations needed for `&mut _`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/reactive_graph-0.2.5/src/computed/async_derived/async_derived.rs:368:14
    |
368 |             |v| v.deref_mut(),
    |              ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type, where the placeholders `_` are specified
    |
368 |             |v: &mut _| v.deref_mut(),
    |               ++++++++

error[E0282]: type annotations needed for `&_`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/reactive_graph-0.2.5/src/computed/async_derived/async_derived.rs:388:40
    |
388 |                 MappedMut::new(inner, |v| v.deref(), |v| v.deref_mut())
    |                                        ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type, where the placeholders `_` are specified
    |
388 |                 MappedMut::new(inner, |v: &_| v.deref(), |v| v.deref_mut())
    |                                         ++++

error[E0282]: type annotations needed for `&mut _`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/reactive_graph-0.2.5/src/computed/async_derived/async_derived.rs:388:55
    |
388 |                 MappedMut::new(inner, |v| v.deref(), |v| v.deref_mut())
    |                                                       ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type, where the placeholders `_` are specified
    |
388 |                 MappedMut::new(inner, |v| v.deref(), |v: &mut _| v.deref_mut())
    |                                                        ++++++++

    Checking itertools v0.14.0
error[E0282]: type annotations needed for `&_`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/reactive_graph-0.2.5/src/computed/async_derived/arc_async_derived.rs:647:59
    |
647 |             ReadGuard::new(Mapped::new_with_guard(plain, |v| v.deref()))
    |                                                           ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type, where the placeholders `_` are specified
    |
647 |             ReadGuard::new(Mapped::new_with_guard(plain, |v: &_| v.deref()))
    |                                                            ++++

For more information about this error, try `rustc --explain E0282`.
error: could not compile `reactive_graph` (lib) due to 9 previous errors
warning: build failed, waiting for other jobs to finish...
